--- a/style.css
+++ b/style.css
@@ -2,11 +2,12 @@ body{
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     padding: 0 auto;
     margin: 0 auto;
+    color: #343239;
 }
 
 .container{
     display: grid;
-    background-color:#EFEEEE;
+    background-color:#fbf9fb;
     grid-template-columns: 1;
     grid-template-areas:
     "header "
@@ -39,7 +40,7 @@ body{
     top: 50px;
     height  : 25px;
     width   : 90%;
-    border-bottom:3px solid black;
+    border-bottom:3px solid #343239;
 }
 
 .divider{
@@ -48,7 +49,7 @@ body{
     position: relative;
     font-size: 3em;
 }
-.divider:after {
+/* .divider:after {
     content: '';
     position: absolute;
     left:39%;
@@ -56,7 +57,7 @@ body{
     height  : 25px;
     width   : 22%;
     border-bottom:1px solid black;
-}
+} */
 .headerInfo{
     text-align: center;
     font-size: 1.5em;
@@ -68,40 +69,60 @@ body{
     margin-right: 20%;
     grid-area:about;
     display:grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1;
     grid-template-areas:
-    "divider divider"
-    "about-content about-content"
-    "languages frameworks";
+    "divider "
+    "about-content "
+    "education "
+    "languages "
+    "frameworks";
 /*     
     background-color: #F9A26C; */
 }
 .about-content{
+    margin-top:1%;
     grid-area: about-content;
-    border-top: 1px solid black;
+    border-top: 1px solid #343239;
 }
+.education{
+    margin-top:15px;
+    margin-bottom: 30px;
+    grid-area:education;
+    text-align: left;
+    position: relative;
+    font-size: 2.2em;
+    
+}
+.educationName{
+    border-bottom: 1px solid #343239;
+    display:inline-block;
+}
+
+/* .educontainer{
+    border-top: 1px solid black;
+} */
 .unimelb{
-    margin-top: 2%;
     width:150px;
     border-radius:8px;
     vertical-align: middle;
     float:left;
 }
 .uni{
+    margin-top: 15px;
     font-weight: bold;
     text-decoration: underline;
 }
 .educ{
-    margin-top:30px;
-    margin-left: 160px;
-    font-size: 1.2em;
+    margin-top: 15px;
+    margin-left: 170px;
+    font-size: 0.6em;
 }
 .educ span{
     display:block;
 }
-.para{
+/* .para{
     margin-top: 150px;
-}
+} */
 .title{
     grid-column-end: span 1;
     background-color:lightblue;
@@ -129,7 +150,7 @@ body{
 .frameworks-table{
     text-align: center;
     border-spacing: 5px;
-    border-top: 1px solid black;
+    border-top: 1px solid #343239;
     width:100%;
 }
 .frameworks h3{
@@ -149,6 +170,7 @@ body{
     padding: 4%;
 } 
 .image{
+    
     position: relative;
 	cursor: pointer;
     border-radius: 10px;
@@ -165,16 +187,18 @@ body{
 	transform: scale(1.03); 
 }
 .imageClass{
+    border-radius:8px;
     max-width: 100%;
     height: auto;
 }
 .text{
+    border-radius:8px;
     position: relative;
-    max-height: 1000px;
-    max-width: 1000px;
+    max-height: 500px;
+    max-width: 750px;
     min-height: 100%;
-    background-color: brown;
-    background-image: url(1000px.jpg);
+    background-color: #f9bb9f ;
+    background-image: url(orange.png);
     background-size: auto 100%;
     background-repeat: no-repeat;
     overflow: auto;
@@ -184,7 +208,6 @@ body{
     line-height: 1.8;
     color: #616569;
     letter-spacing: .03em;
-    font-size: 1.3vw;
 }
 
 
@@ -246,7 +269,20 @@ body{
         
         
     }
+
+    .about {
+        grid-template-columns: 1fr 1fr;
+        grid-template-areas:
+        "divider divider"
+        "about-content about-content"
+        "education education"
+        "languages frameworks";
+    /*     
+        background-color: #F9A26C; */
+    }
     .para{
+        margin-top: 20px;
+        margin-bottom: 30px;
         column-count: 2;
         column-gap: 40px;
         column-rule: 1px solid lightgray;
@@ -333,5 +369,7 @@ body{
     .right{
         float:right;
     } */
+/* 
+    colour for image background : #f58857 */
 }
 
