--- a/style.css
+++ b/style.css
@@ -192,22 +192,26 @@ body{
     height: auto;
 }
 .text{
+    font-size: 1em;
     border-radius:8px;
     position: relative;
-    max-height: 500px;
-    max-width: 750px;
+    max-height: 450px;
+    max-width: 850px;
     min-height: 100%;
     background-color: #f9bb9f ;
-    background-image: url(orange.png);
+    background-image: url(images/text.png);
     background-size: auto 100%;
     background-repeat: no-repeat;
     overflow: auto;
 }
 
 .text-box-content{
-    line-height: 1.8;
-    color: #616569;
-    letter-spacing: .03em;
+    margin-left: 5%;
+    margin-top: 3%;
+    margin-right: 5%;
+    margin-bottom: 3%;
+    line-height: 1.3;
+    letter-spacing: .02em;
 }
 
 
