--- a/style.css
+++ b/style.css
@@ -43,12 +43,21 @@ body{
     border-bottom:3px solid #343239;
 }
 
-.divider{
-    grid-area: divider;
+.subheader{
     text-align: center;
     position: relative;
     font-size: 3em;
+    font-weight: bold;
 }
+.about-subheader{
+    grid-area: about-subheader;
+}
+.projects-subheader{
+    
+    border-bottom: 1px solid #343239;
+    margin: 100px 4% auto 4%;
+}
+
 /* .divider:after {
     content: '';
     position: absolute;
@@ -64,14 +73,12 @@ body{
     padding-top: 1em;
 }
 .about {
-    margin-top: 3%;
-    margin-left: 20%;
-    margin-right: 20%;
+    margin: 3% 20% 0 20%;
     grid-area:about;
     display:grid;
     grid-template-columns: 1;
     grid-template-areas:
-    "divider "
+    "about-subheader "
     "about-content "
     "education "
     "languages "
@@ -106,6 +113,10 @@ body{
     border-radius:8px;
     vertical-align: middle;
     float:left;
+}
+.unimelb:hover{
+	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+
 }
 .uni{
     margin-top: 15px;
@@ -183,8 +194,9 @@ body{
     margin-top:5%;
     margin-bottom:5%;
 }
-.image:hover{
-	transform: scale(1.03); 
+.imageClass:hover{
+    cursor: auto;
+	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
 .imageClass{
     border-radius:8px;
@@ -213,8 +225,24 @@ body{
     line-height: 1.3;
     letter-spacing: .02em;
 }
+.text:hover{
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
 
-
+.text h3{
+    text-align: center;
+    text-decoration: bold;
+    font-size: 1.8vw;
+}
+.text p{
+    font-size: 1.8vw;
+}
+.text table{
+    align-content:left;
+    
+    border-spacing: 20px 0;
+    font-size: 1.8vw;
+}
 .contact{
     grid-area: contact;
     background-color: lightgoldenrodyellow;
@@ -223,39 +251,36 @@ body{
     grid-area: footer;
     background-color: lightgreen;
 }
-.button-git{
-    background-image:url("http://www.stickpng.com/assets/images/5847f98fcef1014c0b5e48c0.png");
-    background-size: cover;
-    background-position: center;
-    display: inline-block;
-    border: none;
-    padding: 20px;
-    width: 20px;
-    border-radius: 900px;
-    height: 20px;
+.button-container{
+    margin: auto;
+    text-align: center;
+    position:relative; 
+    bottom:5%;
+    width:100%;
+}
+.button{
+    color: #343239;
+    background: #f58857; 
+    border: 3px solid #F26627;
+    border-radius: 10px; 
+    padding: 2.5%;
+    margin: 3% 3% 0 3%;
     transition: all 0.3s;
     cursor: pointer;
+    text-transform: uppercase;
+    text-decoration: none;
+    width:auto;
+    height: auto;
+    display:inline-block;
+    
 }
-.button-git:hover {
-	transform: scale(1.05); 
+.button:hover {
+    background-color: white;
+    color: #343239;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
 
-.button-site{
-    background-image:url("http://pixsector.com/cache/cce4660e/av4c26b04321e0f8af280.png");
-    background-size: cover;
-    background-position: center;
-    display: inline-block;
-    border: none;
-    padding: 20px;
-    width: 20px;
-    border-radius: 900px;
-    height: 20px;
-    transition: all 0.3s;
-    cursor: pointer;
-}
-.button-site:hover {
-	transform: scale(1.05); 
-}
+
 @media screen and (min-width: 1081px) 
 {
  
@@ -277,7 +302,7 @@ body{
     .about {
         grid-template-columns: 1fr 1fr;
         grid-template-areas:
-        "divider divider"
+        "about-subheader about-subheader"
         "about-content about-content"
         "education education"
         "languages frameworks";
@@ -299,6 +324,12 @@ body{
         margin-right: auto;
        
     }
+    .button-container{
+        position: absolute;
+    }
+    .button{
+        font-size: 1.2vw;
+    }
     .image{
 
         margin-top:0;
@@ -308,6 +339,15 @@ body{
         
         margin-top:0;
         margin-bottom:0;
+    }
+    .text h3{
+        font-size: 1.5vw;
+    }
+    .text p{
+        font-size: 1.1vw;
+    }
+    .text table{
+        font-size: 0.9vw;
     }
     .right{
         float: right;
@@ -376,4 +416,18 @@ body{
 /* 
     colour for image background : #f58857 */
 }
-
+@media screen and (min-width: 1921px) 
+{
+    .text h3{
+        font-size: 1.8em;
+    }
+    .text p{
+        font-size: 1.2em;
+    }
+    .text table{
+        font-size: 1.1em;
+    }
+    .button{
+        font-size: 1.2em;
+    }
+}
