--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body{
 .header {
     grid-area:header;
     background-color: #F26627;
-    padding: 5%;
+    padding: 3%;
 }
 .headerName{   
     text-align: center;
@@ -41,6 +41,52 @@ body{
     height  : 25px;
     width   : 90%;
     border-bottom:3px solid #343239;
+}
+.headerInfo{
+    text-align: center;
+    font-size: 2em;
+    padding-top: 1em;
+    margin-top: -20px;
+}
+.links-container{
+    margin-top: 1.5%;
+    text-align: center;
+    width: 100%;
+}
+.email-button{
+    background-image: url(images/email.png);
+    background-size: cover;
+    background-position: center;
+    display: inline-block;
+    border: none;
+    padding: 20px;
+    width: 20px;
+    border-radius: 900px;
+    height: 20px;
+    transition: all 0.3s;
+    cursor: pointer;
+    margin-left: 10px;
+}
+.email-button:hover{
+    background-image: url(images/email-light.png);
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+.git-button:hover{
+    background-image: url(images/github-light.png);
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+.git-button{
+    background-image: url(images/github.png);
+    background-size: cover;
+    background-position: center;
+    display: inline-block;
+    border: none;
+    padding: 20px;
+    width: 20px;
+    border-radius: 900px;
+    height: 20px;
+    transition: all 0.3s;
+    cursor: pointer;
 }
 
 .subheader{
@@ -67,10 +113,9 @@ body{
     width   : 22%;
     border-bottom:1px solid black;
 } */
-.headerInfo{
-    text-align: center;
-    font-size: 1.5em;
-    padding-top: 1em;
+
+.email{
+    background-image: url(images/email.jpg);
 }
 .about {
     margin: 3% 20% 0 20%;
@@ -163,6 +208,9 @@ body{
     border-spacing: 5px;
     border-top: 1px solid #343239;
     width:100%;
+    align-content: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 .frameworks h3{
     text-align: center;
@@ -232,30 +280,32 @@ body{
 .text h3{
     text-align: center;
     text-decoration: bold;
-    font-size: 1.8vw;
+    font-size: 3vw;
 }
 .text p{
     font-size: 1.8vw;
 }
+.edutext h3{
+    margin-bottom: 0.5%;
+}
+
 .text table{
     align-content:left;
     
     border-spacing: 20px 0;
     font-size: 1.8vw;
 }
-.contact{
-    grid-area: contact;
-    background-color: lightgoldenrodyellow;
-}
+
 .footer{
+    padding: 0.5%;
     grid-area: footer;
-    background-color: lightgreen;
+    background-color: #F26627;
 }
 .button-container{
     margin: auto;
     text-align: center;
     position:relative; 
-    bottom:5%;
+    bottom:17px;
     width:100%;
 }
 .button{
@@ -279,7 +329,16 @@ body{
     color: #343239;
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
-
+.footer-content{
+    float: left;
+    margin-left:10px;
+}
+.links-container2{
+    float:right;
+    margin-top: 5px;
+    margin-right: 20px;
+    top: 0px;
+}
 
 @media screen and (min-width: 1081px) 
 {
@@ -329,6 +388,7 @@ body{
     }
     .button{
         font-size: 1.2vw;
+        bottom: 5%;
     }
     .image{
 
@@ -344,7 +404,8 @@ body{
         font-size: 1.5vw;
     }
     .text p{
-        font-size: 1.1vw;
+        margin-top: 0;
+        font-size: 1vw;
     }
     .text table{
         font-size: 0.9vw;
