--- a/style.css
+++ b/style.css
@@ -227,26 +227,40 @@ body{
 
 .proj{
     padding: 4%;
-} 
-.image{
     
-    position: relative;
-	cursor: pointer;
-    border-radius: 10px;
+} 
+
+.imageClass{
+    border-radius:8px;
+    max-width: 100%;
+    height: auto;
+    margin-bottom: 50px;
     -webkit-transition: 0.3s ease-in-out, 
     -webkit-transform 0.3s ease-in-out;
 	-moz-transition:  0.3s ease-in-out, 
     -moz-transform 0.3s ease-in-out;
     transition: all 0.3s ease-in-out,
     transform 0.3s ease-in-out ;
-    margin-top:5%;
-    margin-bottom:5%;
 }
 .imageClass:hover{
-    cursor: auto;
-	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    cursor:auto;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+
 }
-.imageClass{
+
+/* .text{
+    font-size: 1em;
+    border-radius:8px;
+    position: relative;
+    -webkit-transition: 0.3s ease-in-out, 
+    -webkit-transform 0.3s ease-in-out;
+	-moz-transition:  0.3s ease-in-out, 
+    -moz-transform 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out,
+    transform 0.3s ease-in-out ;
+} */
+.textImg{
+    display:block;
     border-radius:8px;
     max-width: 100%;
     height: auto;
@@ -259,10 +273,17 @@ body{
     max-width: 850px;
     min-height: 100%;
     background-color: #f9bb9f ;
+    background-size: contain;
     background-image: url(images/text.png);
-    background-size: auto 100%;
     background-repeat: no-repeat;
     overflow: auto;
+    -webkit-transition: 0.3s ease-in-out, 
+    -webkit-transform 0.3s ease-in-out;
+	-moz-transition:  0.3s ease-in-out, 
+    -moz-transform 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out,
+    transform 0.3s ease-in-out ;
+    margin-bottom:100px;
 }
 
 .text-box-content{
@@ -272,6 +293,10 @@ body{
     margin-bottom: 3%;
     line-height: 1.3;
     letter-spacing: .02em;
+    position:absolute;
+    float:left;
+    left:0px;
+    top:-10px;
 }
 .text:hover{
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
@@ -304,7 +329,7 @@ body{
 .button-container{
     margin: auto;
     text-align: center;
-    position:relative; 
+    position:absolute; 
     bottom:17px;
     width:100%;
 }
@@ -342,7 +367,7 @@ body{
 
 @media screen and (min-width: 1081px) 
 {
- 
+    
     .container{
         background-color:#EFEEEE;
         display: grid;
@@ -396,7 +421,7 @@ body{
         margin-bottom:0;
     }
     .text{
-        
+
         margin-top:0;
         margin-bottom:0;
     }
@@ -477,6 +502,13 @@ body{
 /* 
     colour for image background : #f58857 */
 }
+/* @media screen and (min-width: 1700px) 
+{
+    .text{
+        height: 368.7px;
+        width:703.8px;
+    }
+} */
 @media screen and (min-width: 1921px) 
 {
     .text h3{
