--- a/style.css
+++ b/style.css
@@ -51,6 +51,24 @@ body{
     text-align: center;
     width: 100%;
 }
+.linkedin-button{
+    background-image: url(images/linkedin.png);
+    background-size: cover;
+    background-position: center;
+    display: inline-block;
+    border: none;
+    padding: 20px;
+    width: 20px;
+    border-radius: 900px;
+    height: 20px;
+    transition: all 0.3s;
+    cursor: pointer;
+    margin-right: 10px;
+}
+.linkedin-button:hover{
+    background-image: url(images/linkedin-light.png);
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
 .email-button{
     background-image: url(images/email.png);
     background-size: cover;
@@ -64,6 +82,7 @@ body{
     transition: all 0.3s;
     cursor: pointer;
     margin-left: 10px;
+    margin-right: 10px;
 }
 .email-button:hover{
     background-image: url(images/email-light.png);
